[project]
name = "python-testing"
version = "0.1"
description = "null"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Jeremy Thompson"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [

]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/jhthompson/python-testing"
Changelog = "https://github.com/jhthompson/python-testing/releases"
Issues = "https://github.com/jhthompson/python-testing/issues"
CI = "https://github.com/jhthompson/python-testing/actions"


[project.optional-dependencies]
test = ["pytest"]
